--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="hero__content">
             <h1>Alcohol for the Modern Drinker</h1>
             <p>Light and fresh flavors made with real clean ingredients you can feel good about. Just pour, sip and enjoy.</p>
-            <button class="hero__btn">Shop All</button>
+            <button class="hero__btn">Shop ALL</button>
         </div>
         <div class="hero__bars">
             <span class="bar active"></span>
@@ -44,6 +44,26 @@
             <span class="bar"></span>
         </div>
     </section>
+    <article class="article">
+        <div class="container">
+            <div class="article__container">
+                <ul class="article__list">
+                    <li class="article__items">
+                        <p>"What makes Haus so special is its incredible flavors."</p>
+                       <h2 class="article__title-one">FOOD&WINE</h2>
+                    </li>
+                     <li class="article__items">
+                        <p>“For the wine or cocktail lover who’s tried it all and wants something new and refreshing.”</p>
+                       <h2 class="article__title-two">The New York Times</h2>
+                    </li>
+                     <li class="article__items">
+                        <p>“Cleaner, responsibly sourced, and lower in alcohol.”</p>
+                       <h2 class="article__title-three">bon appe'tit</h2>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </article>
     <script src="./js/main.js"></script>
 </body>
 </html>
