--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alcohol for the Modern Drinker</title>
     <link rel="stylesheet" href="./css/main.css">
 </head>
+
 <body>
     <div class="banner">Free shipping on orders over $50</div>
 
@@ -21,7 +23,7 @@
                     <li><a href="#">Account</a></li>
                     <li><a href="#">Cart</a></li>
                 </ul>
-                
+
                 <div class="header__burger" id="burger">
                     <span></span>
                     <span></span>
@@ -35,7 +37,8 @@
         <div class="hero__image" id="heroImage"></div>
         <div class="hero__content">
             <h1>Alcohol for the Modern Drinker</h1>
-            <p>Light and fresh flavors made with real clean ingredients you can feel good about. Just pour, sip and enjoy.</p>
+            <p>Light and fresh flavors made with real clean ingredients you can feel good about. Just pour, sip and
+                enjoy.</p>
             <button class="hero__btn">Shop ALL</button>
         </div>
         <div class="hero__bars">
@@ -50,20 +53,59 @@
                 <ul class="article__list">
                     <li class="article__items">
                         <p>"What makes Haus so special is its incredible flavors."</p>
-                       <h2 class="article__title-one">FOOD&WINE</h2>
+                        <h2 class="article__title-one">FOOD&WINE</h2>
                     </li>
-                     <li class="article__items">
-                        <p>“For the wine or cocktail lover who’s tried it all and wants something new and refreshing.”</p>
-                       <h2 class="article__title-two">The New York Times</h2>
+                    <li class="article__items">
+                        <p class="article__text-two">“For the wine or cocktail lover who’s tried it all and wants
+                            something new and refreshing.”</p>
+                        <h2 class="article__title-two">The New York Times</h2>
                     </li>
-                     <li class="article__items">
+                    <li class="article__items">
                         <p>“Cleaner, responsibly sourced, and lower in alcohol.”</p>
-                       <h2 class="article__title-three">bon appe'tit</h2>
+                        <h2 class="article__title-three">bon appe'tit</h2>
                     </li>
                 </ul>
             </div>
         </div>
     </article>
+    <hr class="hr">
+    <main class="product">
+        <div class="container">
+            <div class="product__container">
+                <h2>Made with natural ingredients, nothing fake</h2>
+                <p class="product__text"> Shop All Flavors</p>
+                <ul class="product__list">
+                    <li class="product__items">
+                        <img src="./img/product1.svg" alt="">
+                        <h3>The Sampler Kit</h3>
+                        <p>Try a variety of Haus flavors with our customizable four-bottle kit. Each bottle serves 2-3
+                            drinks.</p>
+                        <button class="button">Shop Now</button>
+                    </li>
+                    <li class="product__items">
+                        <div>
+                            <img src="./img/product2.svg" alt="">
+                            <h5>best seller</h5>
+                        </div>
+                        <h3>Grapefruit Jalapeño</h3>
+                        <p>Light and refreshing, this aperitif is a bright blend of citrus with a subtle kick of fresh
+                            jalapeño.</p>
+                        <button class="button">Shop Now</button>
+                    </li>
+                    <li class="product__items">
+                        <div>
+                            <img src="./img/product3.svg" alt="">
+                            <h5>best seller</h5>
+                        </div>
+                        <h3>Citrus Flower</h3>
+                        <p>A fresh Californian take on the apéritif. Made with crisp lemon and subtle elderflower.</p>
+                        <button class="button">Shop Now</button>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </main>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
