--- a/index.html
+++ b/index.html
@@ -105,6 +105,76 @@
             </div>
         </div>
     </main>
+    <hr class="hr">
+    <section class="categories">
+        <div class="container">
+            <div class="categories__container">
+                <img src="./img/categories.svg" alt="">
+                <div class="categories__box">
+                    <h3>An intro to apéritifs</h3>
+                    <p>Apéritifs are a category of spirits with complex flavors derived from fruits, herbs, and
+                        botanicals. Their lighter alcohol content (less than whiskey, more than wine) makes them perfect
+                        to sip all evening.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <hr class="hr">
+    <section class="card">
+        <div class="container">
+            <div class="card__container">
+                <div class="card__box">
+                    <h4>Easy to drink</h4>
+                    <p>The perfect anytime drink, sip Haus on its own or with simple mixers you probably already have
+                        like soda or tonic.</p>
+                    <h4>Natural ingredients. Nothing fake.</h4>
+                    <p>Artificial ingredients and refined sugars are a big culprit in hangovers. Feel good about what’s
+                        in your glass that night — and the next day.</p>
+                    <h4>Delivered to your door</h4>
+                    <p>We blend, bottle, and ship our products straight from Sonoma, CA to your doorstep.</p>
+                </div>
+                <img src="./img/boka.svg" alt="">
+            </div>
+        </div>
+    </section>
+    <hr class="hr">
+    <section class="testimonials">
+        <div class="container">
+            <div class="testimonials__container">
+                <div class="testimonials__box">
+                    <ul class="testimonials__list">
+                        <li class="testimonials__items">
+                            <h4>“Haus has found the solution I didn’t really know I was looking for!”</h4>
+                            <p class="testimonials__text">— Susan</p>
+                            <p class="testimonials__text-name">verified buyer</p>
+                        </li>
+                        <li class="testimonials__items">
+                            <h4>“I love the flavor of this apéritif — it’s light and lively, and it’s refreshing with seltzer or tonic.”</h4>
+                            <p class="testimonials__text">— Fiona</p>
+                            <p class="testimonials__text-name">verified buyer</p>
+                        </li>
+                        <li class="testimonials__items">
+                            <h4>“It’s delicious, and unique. I love everything from the packaging, to the flavors.”</h4>
+                            <p class="testimonials__text">— Esteban</p>
+                            <p class="testimonials__text-name">verified buyer</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="work">
+        <div class="container">
+            <div class="work__container">
+                   <img src="./img/work.svg" alt="">
+                <div class="work__box">
+                    <h2>We do things differently than most producers</h2>
+                    <p>Our flavors are derived from real fruits, herbs, and botanicals, not ingredients from a lab. We leave out the artificial ingredients and excess sugar, and tell you what’s inside. It’s a better way to drink.</p>
+                    <button >LEARN MORE</button>
+                </div>
+            </div>
+        </div>
+    </section>
     <script src="./js/main.js"></script>
 </body>
 
