--- a/index.html
+++ b/index.html
@@ -224,17 +224,68 @@
         </div>
     </div>
 
-    <!-- Пример футера (текст который вы просили) -->
-    <footer class="site-footer">
-        <!-- Я предложу ниже варианты текста для футера -->
-    </footer>
-
     <!-- Аудио (замените src на свой mp3) -->
     <audio id="bgAudio" preload="auto">
         <source src="./music/bensound-happiness.mp3" type="audio/mpeg">
         Тег audio не поддерживается вашим браузером.
     </audio>
-
+    <footer class="footer">
+        <div class="container">
+            <div class="footer__container">
+                <div class="footer__box">
+                    <h4>Stay posted</h4>
+                    <p>Let's be friends. Subscribe to our newsletter to receive updates on new launches, recipes,
+                        playlists, and more.</p>
+                    <form action="#">
+                        <label for="email">YOUR EMAIL ADDRESS</label>
+                        <input type="email" name="email" id="">
+                        <button type="submit">Submit</button>
+                    </form>
+                </div>
+                <div class="footer__boxes">
+                    <ul class="footer__list">
+                        <li class="footer__items">
+                            <h6>Explore</h6>
+                            <a href="">Home</a>
+                            <a href="">Shop</a>
+                            <a href="">Membership</a>
+                            <a href="">Our Story</a>
+                            <a href="">FAQ</a>
+                            <a href="">Refer a Friend</a>
+                            <a href="">Corporate Gifting</a>
+                            <a href="">Gift Card</a>
+                        </li>
+                        <li class="footer__items">
+                            <h6>Follow</h6>
+                            <a href="">Instagram</a>
+                            <a href="">Spotify</a>
+                            <a href="">Twitter</a>
+                            <a href="">Facebook</a>
+                        </li>
+                        <li class="footer__items">
+                            <h6>Drop Us a Line</h6>
+                            <a href="">hello@drink.haus</a>
+                            <a href="">press@drink.haus</a>
+                            <a href="">partnerships@drink.haus</a>
+                            <a href="">jobs@drink.haus</a>
+                            <a href="">wholesale@drink.haus</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <footer class="lastest">
+                <div class="container">
+                    <div class="lastest__container">
+                        <p>© Haus 2021</p>
+                        <a href="#">Contact Us</a>
+                        <a href="#">Return Policy</a>
+                        <a href="#">Privacy Policy</a>
+                        <a href="#">Terms & Conditions</a>
+                    </div>
+                </div>
+            </footer>
+        </div>
+    </footer>
 
 
 
