--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
         <div class="container">
             <nav class="header__nav">
                 <ul class="header__links">
-                    <li><a href="#">Shop</a></li>
-                    <li><a href="#">Membership</a></li>
-                    <li><a href="#">Our Story</a></li>
-                    <a href="#" class="header__logo"><img src="./img/log.svg" alt="Logo"></a>
-                    <li><a href="#">Newsletter</a></li>
-                    <li><a href="#">Account</a></li>
-                    <li><a href="#">Cart</a></li>
+                    <li><a href="#shop">Shop</a></li>
+                    <li><a href="#membership">Membership</a></li>
+                    <li><a href="#story">Our Story</a></li>
+                    <a href="#hero" class="header__logo"><img src="./img/log.svg" alt="Logo"></a>
+                    <li><a href="#newsletter">Newsletter</a></li>
+                    <li><a href="#account">Account</a></li>
+                    <li><a href="#cart">Cart</a></li>
                 </ul>
 
                 <div class="header__burger" id="burger">
@@ -33,7 +33,7 @@
         </div>
     </header>
 
-    <section class="hero">
+    <section class="hero" id="hero">
         <div class="hero__image" id="heroImage"></div>
         <div class="hero__content">
             <h1>Alcohol for the Modern Drinker</h1>
@@ -71,7 +71,7 @@
     <hr class="hr">
     <main class="product">
         <div class="container">
-            <div class="product__container">
+            <div class="product__container" id="shop">
                 <h2>Made with natural ingredients, nothing fake</h2>
                 <p class="product__text"> Shop All Flavors</p>
                 <ul class="product__list">
@@ -85,7 +85,32 @@
                     <li class="product__items">
                         <div>
                             <img src="./img/product2.svg" alt="">
-                            <h5>best seller</h5>
+                            <button  class="product__btn">
+                                <span class="span-mother">
+                                    <span>B</span>
+                                    <span>e</span>
+                                    <span>s</span>
+                                    <span>t</span>
+                                    <span>s</span>
+                                    <span>e</span>
+                                    <span>l</span>
+                                    <span>l</span>
+                                    <span>e</span>
+                                    <span>r</span>
+                                </span>
+                                <span class="span-mother2">
+                                    <span>B</span>
+                                    <span>e</span>
+                                    <span>s</span>
+                                    <span>t</span>
+                                    <span>s</span>
+                                    <span>e</span>
+                                    <span>l</span>
+                                    <span>l</span>
+                                    <span>e</span>
+                                    <span>r</span>
+                                </span>
+                            </button>
                         </div>
                         <h3>Grapefruit Jalapeño</h3>
                         <p>Light and refreshing, this aperitif is a bright blend of citrus with a subtle kick of fresh
@@ -95,7 +120,32 @@
                     <li class="product__items">
                         <div>
                             <img src="./img/product3.svg" alt="">
-                            <h5>best seller</h5>
+                            <button class="product__btn">
+                                <span class="span-mother">
+                                    <span>B</span>
+                                    <span>e</span>
+                                    <span>s</span>
+                                    <span>t</span>
+                                    <span>s</span>
+                                    <span>e</span>
+                                    <span>l</span>
+                                    <span>l</span>
+                                    <span>e</span>
+                                    <span>r</span>
+                                </span>
+                                <span class="span-mother2">
+                                    <span>B</span>
+                                    <span>e</span>
+                                    <span>s</span>
+                                    <span>t</span>
+                                    <span>s</span>
+                                    <span>e</span>
+                                    <span>l</span>
+                                    <span>l</span>
+                                    <span>e</span>
+                                    <span>r</span>
+                                </span>
+                            </button>
                         </div>
                         <h3>Citrus Flower</h3>
                         <p>A fresh Californian take on the apéritif. Made with crisp lemon and subtle elderflower.</p>
@@ -106,7 +156,7 @@
         </div>
     </main>
     <hr class="hr">
-    <section class="categories">
+    <section class="categories" id="story">
         <div class="container">
             <div class="categories__container">
                 <img src="./img/categories.svg" alt="">
@@ -120,7 +170,7 @@
         </div>
     </section>
     <hr class="hr">
-    <section class="card">
+    <section class="card" id="cart">
         <div class="container">
             <div class="card__container">
                 <div class="card__box">
@@ -138,7 +188,7 @@
         </div>
     </section>
     <hr class="hr">
-    <section class="testimonials">
+    <section class="testimonials" id="newsletter">
         <div class="container">
             <div class="testimonials__container">
                 <div class="testimonials__box">
@@ -164,7 +214,7 @@
             </div>
         </div>
     </section>
-    <section class="work">
+    <section class="work" id="account">
         <div class="container">
             <div class="work__container">
                 <img src="./img/work.svg" alt="">
@@ -173,12 +223,19 @@
                     <p>Our flavors are derived from real fruits, herbs, and botanicals, not ingredients from a lab. We
                         leave out the artificial ingredients and excess sugar, and tell you what’s inside. It’s a better
                         way to drink.</p>
-                    <button>LEARN MORE</button>
+                    <div class="work__box">
+                        <button class="learn-more">
+                            <span class="circle" aria-hidden="true">
+                                <span class="icon arrow"></span>
+                            </span>
+                            <span class="button-text">LEARN MORE</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <div class="contact-bg">
+    <div class="contact-bg" id="membership">
         <div class="container">
             <div class="contact-inner" id="contact-root">
                 <!-- Левый бокс (плейлист) -->
@@ -201,7 +258,6 @@
                     </div>
                 </div>
 
-                <!-- Правый бокс (контакты/ссылки) -->
                 <div class="box right" id="box-right">
                     <div class="content">
                         <div>
@@ -209,14 +265,43 @@
                                 Ha(us)</div>
                             <div style="opacity:.85"></div>
 
-                            <div class="socials" style="margin-top:16px">
-                                <a href="https://instagram.com" target="_blank" rel="noopener noreferrer"
-                                    style="opacity:.85">Instagram</a>
-                                <a href="https://twitter.com" target="_blank" rel="noopener noreferrer"
-                                    style="opacity:.85">Twitter</a>
-                                <a href="https://facebook.com" target="_blank" rel="noopener noreferrer"
-                                    style="opacity:.85">Facebook</a>
-                            </div>
+                            <ul class="wrapper">
+                                <li class="icon facebook">
+                                    <span class="tooltip">Facebook</span>
+                                    <a href="https://facebook.com" target="_blank" rel="noopener noreferrer">
+                                        <svg viewBox="0 0 320 512" height="1.8em" fill="currentColor"
+                                            xmlns="http://www.w3.org/2000/svg">
+                                            <path
+                                                d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z">
+                                            </path>
+                                        </svg>
+                                    </a>
+                                </li>
+
+                                <li class="icon twitter">
+                                    <span class="tooltip">Twitter</span>
+                                    <a href="https://twitter.com" target="_blank" rel="noopener noreferrer">
+                                        <svg height="1.8em" fill="currentColor" viewBox="0 0 48 48"
+                                            xmlns="http://www.w3.org/2000/svg" class="twitter">
+                                            <path
+                                                d="M42,12.429c-1.323,0.586-2.746,0.977-4.247,1.162c1.526-0.906,2.7-2.351,3.251-4.058c-1.428,0.837-3.01,1.452-4.693,1.776C34.967,9.884,33.05,9,30.926,9c-4.08,0-7.387,3.278-7.387,7.32c0,0.572,0.067,1.129,0.193,1.67c-6.138-0.308-11.582-3.226-15.224-7.654c-0.64,1.082-1,2.349-1,3.686c0,2.541,1.301,4.778,3.285,6.096c-1.211-0.037-2.351-0.374-3.349-0.914c0,0.022,0,0.055,0,0.086c0,3.551,2.547,6.508,5.923,7.181c-0.617,0.169-1.269,0.263-1.941,0.263c-0.477,0-0.942-0.054-1.392-0.135c0.94,2.902,3.667,5.023,6.898,5.086c-2.528,1.96-5.712,3.134-9.174,3.134c-0.598,0-1.183-0.034-1.761-0.104C9.268,36.786,13.152,38,17.321,38c13.585,0,21.017-11.156,21.017-20.834c0-0.317-0.01-0.633-0.025-0.945C39.763,15.197,41.013,13.905,42,12.429">
+                                            </path>
+                                        </svg>
+                                    </a>
+                                </li>
+
+                                <li class="icon instagram">
+                                    <span class="tooltip">Instagram</span>
+                                    <a href="https://instagram.com" target="_blank" rel="noopener noreferrer">
+                                        <svg xmlns="http://www.w3.org/2000/svg" height="1.8em" fill="currentColor"
+                                            class="bi bi-instagram" viewBox="0 0 16 16">
+                                            <path
+                                                d="M8 0C5.829 0 5.556.01 4.703.048 3.85.088 3.269.222 2.76.42a3.917 3.917 0 0 0-1.417.923A3.927 3.927 0 0 0 .42 2.76C.222 3.268.087 3.85.048 4.7.01 5.555 0 5.827 0 8.001c0 2.172.01 2.444.048 3.297.04.852.174 1.433.372 1.942.205.526.478.972.923 1.417.444.445.89.719 1.416.923.51.198 1.09.333 1.942.372C5.555 15.99 5.827 16 8 16s2.444-.01 3.298-.048c.851-.04 1.434-.174 1.943-.372a3.916 3.916 0 0 0 1.416-.923c.445-.445.718-.891.923-1.417.197-.509.332-1.09.372-1.942C15.99 10.445 16 10.173 16 8s-.01-2.445-.048-3.299c-.04-.851-.175-1.433-.372-1.941a3.926 3.926 0 0 0-.923-1.417A3.911 3.911 0 0 0 13.24.42c-.51-.198-1.092-.333-1.943-.372C10.443.01 10.172 0 7.998 0h.003zm-.717 1.442h.718c2.136 0 2.389.007 3.232.046.78.035 1.204.166 1.486.275.373.145.64.319.92.599.28.28.453.546.598.92.11.281.24.705.275 1.485.039.843.047 1.096.047 3.231s-.008 2.389-.047 3.232c-.035.78-.166 1.203-.275 1.485a2.47 2.47 0 0 1-.599.919c-.28.28-.546.453-.92.598-.28.11-.704.24-1.485.276-.843.038-1.096.047-3.232.047s-2.39-.009-3.233-.047c-.78-.036-1.203-.166-1.485-.276a2.478 2.478 0 0 1-.92-.598 2.48 2.48 0 0 1-.6-.92c-.109-.281-.24-.705-.275-1.485-.038-.843-.046-1.096-.046-3.233 0-2.136.008-2.388.046-3.231.036-.78.166-1.204.276-1.486.145-.373.319-.64.599-.92.28-.28.546-.453.92-.598.282-.11.705-.24 1.485-.276.738-.034 1.024-.044 2.515-.045v.002zm4.988 1.328a.96.96 0 1 0 0 1.92.96.96 0 0 0 0-1.92zm-4.27 1.122a4.109 4.109 0 1 0 0 8.217 4.109 4.109 0 0 0 0-8.217zm0 1.441a2.667 2.667 0 1 1 0 5.334 2.667 2.667 0 0 1 0-5.334z">
+                                            </path>
+                                        </svg>
+                                    </a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -237,9 +322,27 @@
                     <p>Let's be friends. Subscribe to our newsletter to receive updates on new launches, recipes,
                         playlists, and more.</p>
                     <form action="#">
-                        <label for="email">YOUR EMAIL ADDRESS</label>
-                        <input type="email" name="email" id="">
-                        <button type="submit">Submit</button>
+                        <div class="input-wrapper">
+                            <svg class="icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+                                <g data-name="Layer 2">
+                                    <g data-name="inbox">
+                                        <rect width="24" height="24" transform="rotate(180 12 12)" opacity="0"></rect>
+                                        <path
+                                            d="M20.79 11.34l-3.34-6.68A3 3 0 0 0 14.76 3H9.24a3 3 0 0 0-2.69 1.66l-3.34 6.68a2 2 0 0 0-.21.9V18a3 3 0 0 0 3 3h12a3 3 0 0 0 3-3v-5.76a2 2 0 0 0-.21-.9zM8.34 5.55a1 1 0 0 1 .9-.55h5.52a1 1 0 0 1 .9.55L18.38 11H16a1 1 0 0 0-1 1v2a1 1 0 0 1-1 1h-4a1 1 0 0 1-1-1v-2a1 1 0 0 0-1-1H5.62z">
+                                        </path>
+                                    </g>
+                                </g>
+                            </svg>
+                            <input type="text" name="text" class="input" placeholder="info@gmail.com" />
+                            <button class="Subscribe-btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="30" height="10" viewBox="0 0 38 15"
+                                    class="arrow">
+                                    <path
+                                        d="M10 7.519l-.939-.344h0l.939.344zm14.386-1.205l-.981-.192.981.192zm1.276 5.509l.537.843.148-.094.107-.139-.792-.611zm4.819-4.304l-.385-.923h0l.385.923zm7.227.707a1 1 0 0 0 0-1.414L31.343.448a1 1 0 0 0-1.414 0 1 1 0 0 0 0 1.414l5.657 5.657-5.657 5.657a1 1 0 0 0 1.414 1.414l6.364-6.364zM1 7.519l.554.833.029-.019.094-.061.361-.23 1.277-.77c1.054-.609 2.397-1.32 3.629-1.787.617-.234 1.17-.392 1.623-.455.477-.066.707-.008.788.034.025.013.031.021.039.034a.56.56 0 0 1 .058.235c.029.327-.047.906-.39 1.842l1.878.689c.383-1.044.571-1.949.505-2.705-.072-.815-.45-1.493-1.16-1.865-.627-.329-1.358-.332-1.993-.244-.659.092-1.367.305-2.056.566-1.381.523-2.833 1.297-3.921 1.925l-1.341.808-.385.245-.104.068-.028.018c-.011.007-.011.007.543.84zm8.061-.344c-.198.54-.328 1.038-.36 1.484-.032.441.024.94.325 1.364.319.45.786.64 1.21.697.403.054.824-.001 1.21-.09.775-.179 1.694-.566 2.633-1.014l3.023-1.554c2.115-1.122 4.107-2.168 5.476-2.524.329-.086.573-.117.742-.115s.195.038.161.014c-.15-.105.085-.139-.076.685l1.963.384c.192-.98.152-2.083-.74-2.707-.405-.283-.868-.37-1.28-.376s-.849.069-1.274.179c-1.65.43-3.888 1.621-5.909 2.693l-2.948 1.517c-.92.439-1.673.743-2.221.87-.276.064-.429.065-.492.057-.043-.006.066.003.155.127.07.099.024.131.038-.063.014-.187.078-.49.243-.94l-1.878-.689zm14.343-1.053c-.361 1.844-.474 3.185-.413 4.161.059.95.294 1.72.811 2.215.567.544 1.242.546 1.664.459a2.34 2.34 0 0 0 .502-.167l.15-.076.049-.028.018-.011c.013-.008.013-.008-.524-.852l-.536-.844.019-.012c-.038.018-.064.027-.084.032-.037.008.053-.013.125.056.021.02-.151-.135-.198-.895-.046-.734.034-1.887.38-3.652l-1.963-.384zm2.257 5.701l.791.611.024-.031.08-.101.311-.377 1.093-1.213c.922-.954 2.005-1.894 2.904-2.27l-.771-1.846c-1.31.547-2.637 1.758-3.572 2.725l-1.184 1.314-.341.414-.093.117-.025.032c-.01.013-.01.013.781.624zm5.204-3.381c.989-.413 1.791-.42 2.697-.307.871.108 2.083.385 3.437.385v-2c-1.197 0-2.041-.226-3.19-.369-1.114-.139-2.297-.146-3.715.447l.771 1.846z">
+                                    </path>
+                                </svg>Subscribe
+                            </button>
+                        </div>
                     </form>
                 </div>
                 <div class="footer__boxes">
